# dx_stream

./: .bumpversion.cfg  .gitattributes  Dockerfile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_MATERIAL.md  RELEASE_NOTES_WITH_JIRA_NUM.md  build.sh  dk  install.sh  install_gstshark.sh  run_demo.sh  setup.sh  setup_dxnn_assets.sh  setup_sample_models.sh  setup_sample_videos.sh  sonar-project.properties  uninstall.sh
.github/: pull_request_template.md
.github/scripts/: write_release_notes.sh
.github/workflows/: cpp-check.yml  gh-cloud-create-tag-main.yml  gh-cloud-dispatch-submodule-update.yml  gh-cloud-merge-staging-to-main.yml  merge-conflict-test.yml  public-main.yml  release_notes_automation.yml  sonar.yml
bindings/python/pydxs/: CMakeLists.txt  README.md  pyproject.toml  setup.py
bindings/python/pydxs/src/: metadata_binding.cpp
debian/: changelog  control  postinst  postrm  prerm  rules
docs/: mkdocs.yml
docs/source/docs/: 01_DXNN_Streamer_Overview.md  02_DX-STREAM_Installation.md  04_Writing_Your_Own_Application.md  06_Troubleshooting_and_FAQ.md  Appendix_Build_on_OrangePi5Plus.md  Appendix_Change_Log.md  Appendix_Performance_Evaluation_with_GstShark.md  Appendix_User_Metadata_Guide.md  installation.md  overview.md  troubleshooting_and_faq.md  writing_your_own_application.md
docs/source/docs/Elements/: 03_01_DxPreprocess.md  03_02_DxInfer.md  03_03_DxPostprocess.md  03_04_DxTracker.md  03_05_DxOsd.md  03_06_DxGather.md  03_07_DxInputSelector.md  03_08_DxOutputSelector.md  03_09_DxRate.md  03_10_DxMsgConv.md  03_11_DxMsgBroker.md
docs/source/docs/Pipeline_Example/: 05_01_Single-Stream.md  05_02_Multi-Stream.md  05_03_Secondary-Inference.md  05_04_MsgBroker.md
docs/source/docs/elements/: dxgather.md  dxinfer.md  dxmsgbroker.md  dxmsgconv.md  (+7 more)
dx_stream/apps/: build.sh
dx_stream/apps/kafka/: kafka_consume_example.cpp  kafka_consume_example.py  kafka_consume_example_frame.py  meson.build
dx_stream/apps/mqtt/: meson.build  mqtt_sub_example.cpp  mqtt_sub_example.py  mqtt_sub_example_frame.py
dx_stream/apps/usermeta/: meson.build  usermeta_app.cpp  usermeta_app.py
dx_stream/configs/: broker_mqtt.cfg  msgconv_config.json
dx_stream/custom_library/: build.sh
dx_stream/custom_library/message_convert_library/dx_msgconvl/: dx_msgconvl.cpp  dx_msgconvl_priv.cpp  dx_msgconvl_priv.hpp  meson.build
dx_stream/custom_library/postprocess_library/DeepLabV3PlusMobileNetV2_2/: meson.build  postprocess.cpp
dx_stream/custom_library/postprocess_library/PPU/: meson.build  postprocess.cpp
dx_stream/custom_library/postprocess_library/YOLOV5Pose640_1/: meson.build  postprocess.cpp
dx_stream/pipelines/broker/: run_dxmsgbroker_kafka.sh  run_dxmsgbroker_mqtt.sh
dx_stream/pipelines/multi_stream/: run_multi_stream_YOLOV5S.sh  run_multi_stream_single_infer_YOLOV5S.sh
dx_stream/pipelines/rtsp/: run_RTSP.sh
dx_stream/pipelines/secondary_mode/: run_secondary_mode.sh
dx_stream/pipelines/tracking/: run_YOLOV5S_tracker.sh
gst-dxstream-plugin/: meson.build  meson_options.txt
gst-dxstream-plugin/general/: dxcommon.hpp
gst-dxstream-plugin/metadata/: gst-dxframemeta.cpp  gst-dxframemeta.hpp  gst-dxmeta.cpp  gst-dxmeta.hpp  gst-dxmsgmeta.cpp  gst-dxmsgmeta.hpp  gst-dxobjectmeta.cpp  gst-dxobjectmeta.hpp  gst-dxusermeta.cpp  gst-dxusermeta.hpp  meson.build
gst-dxstream-plugin/src/: gst-dxgather.cpp  gst-dxgather.hpp  gst-dxinfer.cpp  gst-dxinfer.hpp  gst-dxinputselector.cpp  gst-dxinputselector.hpp  gst-dxmsgbroker.cpp  gst-dxmsgbroker.hpp  gst-dxmsgconv.cpp  gst-dxmsgconv.hpp  gst-dxmuxer.cpp  gst-dxmuxer.hpp  gst-dxosd.cpp  gst-dxosd.hpp  gst-dxoutputselector.cpp  gst-dxoutputselector.hpp  gst-dxpostprocess.cpp  gst-dxpostprocess.hpp  gst-dxpreprocess.cpp  gst-dxpreprocess.hpp  gst-dxrate.cpp  gst-dxrate.hpp  gst-dxrouter.cpp  gst-dxrouter.hpp  gst-dxstream.cpp  gst-dxtiler.cpp  gst-dxtiler.hpp  gst-dxtracker.cpp  gst-dxtracker.hpp  meson.build
gst-dxstream-plugin/src/brokers/: dx_msgbrokerl_kafka.cpp  dx_msgbrokerl_kafka.hpp  dx_msgbrokerl_mqtt.cpp  dx_msgbrokerl_mqtt.hpp
gst-dxstream-plugin/src/preprocessors/: libyuv_preprocessor.cpp  libyuv_preprocessor.h  preprocessor.cpp  preprocessor.h  preprocessor_factory.cpp  preprocessor_factory.h  rga_preprocessor.cpp  rga_preprocessor.h
gst-dxstream-plugin/src/tracker/OC_SORT/include/: Association.hpp  KalmanBoxTracker.hpp  KalmanFilter.hpp  OCSort.hpp  Utilities.hpp
gst-dxstream-plugin/src/tracker/OC_SORT/src/: Association.cpp  KalmanBoxTracker.cpp  KalmanFilter.cpp  OCSort.cpp  Utilities.cpp  lapjv.cpp
gst-dxstream-plugin/src/tracker/common/include/: Tracker.hpp  TrackerFactory.hpp
gst-dxstream-plugin/src/tracker/common/src/: TrackerFactory.cpp
gst-dxstream-plugin/src/utils/: format_convert.cpp  format_convert.hpp  memory_pool.cpp  memory_pool.hpp  utils.cpp  utils.hpp
gst-dxstream-plugin/src/utils/libyuv_transform/: libyuv_transform.cpp  libyuv_transform.hpp
scripts/: color_env.sh  color_test.sh  get_resource.sh  merge_compile_commands.py
scripts/setup/: 00_common.sh  01_essential_tools.sh  02_cmake.sh  03_meson.sh  04_gstreamer.sh  05_opencv.sh  06_communication.sh  07_libyuv.sh  README.md
test/elements/: test_dxgather.c  test_dxgather.cpp  test_dxinfer.c  test_dxinfer.cpp  test_dxmsgbroker.cpp  test_dxmsgconv.c  test_dxmsgconv.cpp  test_dxmuxer.c  test_dxosd.cpp  test_dxpostprocess.c  test_dxpreprocess.c  test_dxpreprocess.cpp  test_dxrate.c  test_dxrate.cpp  test_dxrouter.c  test_dxtiler.c  test_dxtracker.c  test_elements.sh
test/pipelines/: test_interval.c  test_interval.cpp  test_multi_pipeline.c  test_multi_pipeline.cpp  test_pipeline.sh  test_roi.c  test_roi.cpp  test_secondary_pipeline.c  test_secondary_pipeline.cpp  test_single_pipeline.c  test_single_pipeline.cpp
test/test_configs/: inference_config.json  msgconv_config.json  postprocess_config.json
test/test_plugin/: build.sh  dxgenbuffer.cpp  dxgenbuffer.hpp  dxgenobj.cpp  dxgenobj.hpp  dxtest.cpp  meson.build
test/test_pydxs/: run_tests.sh  test_usermeta.py
test/test_usermeta/: meson.build  test_usermeta.cpp  test_usermeta.sh
(+88 files in other folders)
