[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
    "scikit-build-core>=0.9.0; python_version>='3.8'",
]
build-backend = "setuptools.build_meta"

[project]
name = "pydxs"
version = "0.1.0"
description = "Python bindings for DX Stream"
requires-python = ">=3.6"
dependencies = []
